--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "build-web": "expo build:web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "~19.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^51.0.12",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.74.2",
     "react-native-paper": "^5.8.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
