--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "build-web": "expo build:web"
   },
   "dependencies": {
-    "@expo/webpack-config": "~19.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^51.0.12",
@@ -21,7 +20,8 @@
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
